--- a/public/static/base.css
+++ b/public/static/base.css
@@ -6,7 +6,7 @@ body {
     background-color: #161616;
 }
 
-.header-container {
+.container {
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -22,13 +22,86 @@ body {
     justify-self: center;
     justify-content: center;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
+}
+
+main {
+    margin-top: 30px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+aside {
+    display: flex;
+    flex-direction: column;
+    justify-self: flex-end;
+    width: 30%;
+    max-width: 400px;
+}
+
+aside .container {
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.tags {
+    text-align: center;
+}
+
+aside ul {
+    padding: 0;
+    text-align: center;
+    list-style-type: "✸";
+}
+
+aside ul li {
+    margin-bottom: 5px;
+    padding-left: 10px;
+}
+
+/* 
+Искусственно создадим контейнер в котором разная информация
+*/
+.cards {
+    flex-direction: column;
+    width: 50%;
+    margin-bottom: 10px;
+    margin-right: 15px;
+}
+
+.green-text {
+    color: #00ff00;
+}
+
+.blue-text {
+    color: #0000ff;
+}
+
+.red-text {
+    color: #ff0000;
+}
+
+.yellow-text {
+    color: #ffff00;
+}
+
+aside .container h2 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+.user-data a {
+    color: #838383;
 }
 
 .user-actions {
+    padding: 5px 0;
     display: flex;
+    justify-content: space-between;
     flex-direction: column; 
-    align-self: flex-end;
     margin: 0 0 0 10px;
 }
 
@@ -37,8 +110,9 @@ body {
 }
 
 header {
+    filter: drop-shadow(0 4px 2px rgba(0, 0, 0, 0.75));
     position: sticky;
-    top: 0;
+    top: 10px;
 }
 
 .logo {
@@ -65,11 +139,31 @@ header {
 }
 
 .ask-button {
+    transform: translateX(-67px);
     cursor: pointer;
-    padding: 10px;
+    padding: 11px;
     border: none;
     color: #d4d4d4;
-    border-radius: 5px;
+    border-radius: 0 10px 10px 0;
     background-color: #064b00;
-    margin-left: 10px;
+}
+
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #2e2e2e;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #5a5a5a;
+    border-radius: 10px;
+    border: 3px solid #2e2e2e;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #4a4a4a;
 }
