--- a/public/static/question.css
+++ b/public/static/question.css
@@ -31,6 +31,7 @@
 }
 
 .description p {
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -134,4 +135,36 @@
     flex-flow: row;
     width: 100%;
     margin-bottom: 10px;
+}
+
+.user-answer {
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.user-answer textarea {
+    font-family: "Fira Sans", sans-serif;
+    resize: vertical;
+    padding: 5px;
+    justify-self: stretch;
+    background-color: #3d3d3d;
+    border-radius: 5px;
+    width: 100%;
+    color: #d4d4d4;
+    margin: 0px 0 15px 0;
+}
+
+.answer-button {
+    width: 100%;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #064b00;
+    border-radius: 5px;
+    color: #d4d4d4;
+    border: none;
 }
