--- a/public/static/login.css
+++ b/public/static/login.css
@@ -27,7 +27,7 @@ form {
 
 .input-field label {
     font-weight: bold; 
-    width: 30%;   
+    width: 40%;   
     align-self: center;
 }
 
@@ -36,6 +36,7 @@ form {
     resize: vertical;
     padding: 5px;
     justify-self: stretch;
+    align-self: center;
     background-color: #d4d4d4;
     border: 1px solid #3d3d3d;
     border-radius: 5px;
@@ -57,9 +58,10 @@ form {
 }
 
 .login-button {
+    align-self: center;
     font-size: 20px;
     cursor: pointer;
-    padding: 10px;
+    padding: 10px 25px;
     font-weight: bold;
     background-color: #064b00;
     border-radius: 5px;
@@ -67,7 +69,45 @@ form {
     border: none;
 }
 
-.sign-up-link {
+.sign-up-link, .login-link {
     cursor: pointer;
     text-decoration: underline;
+}
+
+.file-image-container {
+    max-width: 400px;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+}   
+
+.file-image-container img {
+    border-radius: 5px;
+}   
+
+.file-load-container {
+    max-width: 400px;
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+}
+
+.file-load-container input {
+    padding-left: 0;
+    width: auto !important;
+    border: none !important;
+    background: none !important;
+}
+
+.file-load-container button {
+    width: 30%;
+    max-width: 150px;
+    cursor: pointer;
+    box-sizing: border-box;
+    font-weight: bold;
+    background-color: #064b00;
+    border-radius: 5px;
+    color: #d4d4d4;
+    border: none;
 }
