--- a/templates/base.html
+++ b/templates/base.html
@@ -14,17 +14,17 @@
   <body>
     <header>
       <div class="header container">
-          <a class="logo" href="index.html">AskMe</a>
+          <a class="logo" href="/">AskMe</a>
           <div class="search-bar">
-            <input type="text" placeholder="Search..." class="search-input px24"><button class="ask-button px24">Ask!</button>
+            <input type="text" placeholder="Search..." class="search-input px24"><button onclick="window.location.href='/ask'" class="ask-button px24">Ask!</button>
           </div>
           <div class="user-data">
             <img height="55" width="55" src="https://placehold.co/200" alt="user image">
             <div class="user-actions">
               <p>Username</p>
               <span>
-                <a href="settings.html">settings</a>
-                <a href="logout.html">log out</a>
+                <a href="/settings">settings</a>
+                <a href="/logout">log out</a>
               </span>
             </div>
           </div>
