--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
                     <p>Incorrect credentials.</p>
                 </div>
                 <button class="login-button">Log In</button>
-                <p style="text-align: center; margin-bottom: 0;">Not registered yet? <a href="/signup" class="sign-up-link">Sign Up!</a></p>
+                <p style="text-align: center; margin-bottom: 0;">Not registered yet? <a href="{% url 'signup' %}" class="sign-up-link">Sign Up!</a></p>
             </form>
         </div>
       </div>
