--- a/templates/signup.html
+++ b/templates/signup.html
@@ -43,7 +43,7 @@
                     <p>This email has already been registered.</p>
                 </div>
                 <button class="login-button">Sign Up!</button>
-                <p style="text-align: center; margin-bottom: 0;">Have an account? <a href="/login" class="login-link">Log In!</a></p>
+                <p style="text-align: center; margin-bottom: 0;">Have an account? <a href="{% url 'login' %}" class="login-link">Log In!</a></p>
             </form>
         </div>
       </div>
