--- a/static/question.css
+++ b/static/question.css
@@ -59,6 +59,15 @@
     flex-flow: column;
 }
 
+.answers-container {
+    width: 100%;
+}
+
+.answers-container h2 {
+    text-align: left;
+    width: 100%;
+}
+
 .likes {
     margin-top: 10px;
     padding: 0px 5px;
