--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
             <h1>New Questions</h1><a href="/hot">Hot Questions</a>
             {% endif %}
         </div>
+        {% if questions %}
         {% for question in questions %}
         <div class="question-card container">
             <div class="avatar-and-description">
@@ -48,5 +49,10 @@
         </div>
         {% endfor %}
         {% include 'paginator.html' %}
+        {% else %}
+        <div class="question-card container">
+            <h1>No questions yet</h1>
+        </div>
+        {% endif %}
       </div>
       {% endblock %}
