--- a/static/index.css
+++ b/static/index.css
@@ -82,12 +82,25 @@
 }
 
 .arrows-container {
+    display: flex;
+    flex-flow: column;
     padding-left: 5px;
     border-left: 1px solid #838383;
 }
 
-.arrow {
+.arrow-button {
     cursor: pointer;
+    color: white;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+}
+
+
+.liked {
+    color: #a6e0a0;
 }
 
 .question-tags {
