--- a/templates/question.html
+++ b/templates/question.html
@@ -12,13 +12,31 @@
                 <div class="description-actions">
                     <div class="avatar-and-description">
                         <div class="image-like-container">
+                            {% if question.user.avatar %}
+                            <img height="100" width="100" src="{{ MEDIA_URL }}{{ question.user.avatar }}" alt="user image">
+                            {% else %}
                             <img height="100" width="100" src="https://placehold.co/500" alt="user image">
+                            {% endif %}
                             <div class="likes">
+                                {% if request.user.is_authenticated %}
                                 <div class="number">{{question.like_count}}</div>
                                 <div class="arrows-container">
+                                    {% if question in questions_liked_by_user %}
+                                        {% if like == 1 %}
+                                            <div class="arrow liked">▲</div>
+                                            <div class="arrow">▼</div>
+                                        {% else %}
+                                            <div class="arrow">▲</div>
+                                            <div class="arrow liked">▼</div>
+                                        {% endif %}
+                                    {% else %}
                                     <div class="arrow">▲</div>
                                     <div class="arrow">▼</div>
+                                    {% endif %}
                                 </div>
+                                {% else %}
+                                <div class="number" style="display: flex; width: 100%; justify-content: center; padding: 10px">{{ question.like_count }}</div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -46,7 +64,11 @@
                 <div class="answer" id="{{ comment.id }}">
                     <div class="avatar-and-description">
                         <div class="image-like-container">
+                            {% if comment.user.avatar %}
+                            <img height="80" width="80" src="{{ MEDIA_URL }}{{ comment.user.avatar }}" alt="user image">
+                            {% else %}
                             <img height="80" width="80" src="https://placehold.co/500" alt="user image">
+                            {% endif %}
                             <div class="likes">
                                 <div class="number">0</div>
                                 <div class="arrows-container">
@@ -60,9 +82,17 @@
                                 <p>{{ comment.content }}</p>
                                 <div class="correct-checkbox">
                                     {% if comment.is_correct %}
-                                    <input type="checkbox" checked>
+                                        {% if question.user.id == request.user.id %}
+                                            <input type="checkbox" checked>
+                                        {% else %}
+                                            <input type="checkbox" checked disabled>
+                                        {% endif %}
                                     {% else %}
-                                    <input type="checkbox">
+                                        {% if question.user.id == request.user.id %}
+                                            <input type="checkbox">
+                                        {% else %}
+                                            <input type="checkbox" disabled>
+                                        {% endif %}
                                     {% endif %}
                                     <span>Correct</span>
                                 </div>
